(fix) fixed overflow on mobile (#2)

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -8,7 +8,8 @@ h1,h2,h3,p,table,th,td,a,ul,li {
     margin: 0;
     font-family: "NeueHaasGroteskText Pro";
     font-size: 20px;
-    line-height: 25px
+    line-height: 25px;
+    overflow-wrap: break-word;
 }
 
 #i, td[headers="i"] {
@@ -29,6 +30,7 @@ a:visited {
 
 table {
     width: 100%;
+    max-width: 100%;
 }
 
 
@@ -51,6 +53,8 @@ body {
 .page {
   padding: clamp(16px, 10vw, 64px);
   box-sizing: border-box;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 .layout {
@@ -70,7 +74,7 @@ body {
 }
 
 tbody {
-    margin: clamp(16px, 10vw, 64px);
+    margin-top: clamp(16px, 10vw, 64px);
 }
 
 .receipt-images {
